--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <head>
     <title>박진주</title>
     <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Black+And+White+Picture&family=Nanum+Brush+Script&display=swap"
+      rel="stylesheet"
+    />
     <style>
+            @import url("https://fonts.googleapis.com/css2?family=Black+And+White+Picture&family=Nanum+Brush+Script&display=swap");
       @media (max-width: 800px) {
         .container {
           border: solid 4px green;
@@ -22,9 +29,16 @@
           border: solid 4px orange;
         }
       }
+      * {
+        font-family: "Black And White Picture", sans-serif;
+        font-family: "Nanum Brush Script", cursive;
+        font-size: 2em;
+      }
     </style>
   </head>
   <body>
     <div class="container">hello</div>
+    <div>“코코본드는 채권인데 왜 주식보다 더 큰 손실을 강요받아야 하죠? 뭔가 잘못된 거 아닌가요?”
+      크레디스위스(CS·크레디트스위스) 매각 과정에서 ‘코코본드’(조건부자본증권) 22조원어치가 전액 상각된 데 대한 투자자들의 반발이 뜨겁다. 원칙적으로 채권의 변제 순위는 주식보다 높아야 하는데 스위스 당국은 이런 상식을 무시했다는 논리다. 그 여파로 다른 글로벌 은행들의 코코본드 가격도 추락하며 시장이 크게 흔들리고 있다.</div>
   </body>
 </html>
