오픈그래프1

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="utf-8" />
   <head>
     <title>박진주</title>
+    <meta property="og:url" content="https://images.samsung.com/kdp/aboutsamsung/brand_identity/logo/720_600_1.png" />
     <link rel="stylesheet" href="/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
