오픈그래프 url 변경

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:sitename" content="삼성" />
     <meta property="og:title" content="samsung" />
     <meta property="og:description" content="오픈그래프 Test" />
-    <meta property="og:url" content="https://images.samsung.com/kdp/aboutsamsung/brand_identity/logo/720_600_1.png" />
+    <meta property="og:image" content="https://images.samsung.com/kdp/aboutsamsung/brand_identity/logo/720_600_1.png" />
 
 
     <link rel="stylesheet" href="/style.css" />
